--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.2.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
-    "os": "^0.1.2"
+    "os": "^0.1.2",
+    "slugify": "^1.6.6"
   }
 }
